# kur-ver

./: .env.prod.example  .gitignore  DEPLOY_DOKPLOY.md  README.md  Surec.md  YONETICI_BRIFINGI_AZ.md  agents.md  db.xlsx  deploy  docker-compose.dokploy.yml  docker-compose.server.yml  docker-compose.yml  gelistirme.txt  kullanici-odakli-gelistirme-plani.md  plan.md  saas-profesyonel-plan.md  start_kurban.bat  tasks.md  verenel_kurban_video_sunum.md
.github/workflows/: deploy.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py  models.py  schemas.py  worker.py
backend/app/api/: deps.py  router.py
backend/app/api/routers/: auth.py  db_import.py  submissions.py  superadmin.py  uploads.py
backend/app/core/: config.py  database.py  roles.py  security.py
backend/app/services/: ai.py  audit.py  importer.py  matching.py  media.py  pipeline.py  scoring.py  sms.py  storage.py
backend/tests/: test_ai.py  test_importer.py  test_matching.py  test_rbac_roles.py  test_scoring.py  test_sms_dispatch.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  opengraph-image.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/login/: page.tsx
frontend/app/uploader/: page.tsx
frontend/components/: AppSidebarShell.tsx  QualityTag.tsx  Topbar.tsx
frontend/components/home/: SaasHomeExperience.tsx
frontend/components/ui/: feedback-center.tsx
frontend/lib/: api.ts  text-tr.ts  types.ts  userActions.ts
tasks/: ux-ui-plan.md
(+8 files in other folders)
