[project]
name = "kurban-video-platform"
version = "0.1.0"
description = "Kurban video verification and SMS dispatch platform"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.34.0",
  "sqlalchemy>=2.0.40",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib>=1.7.4",
  "python-multipart>=0.0.20",
  "openpyxl>=3.1.5",
  "httpx>=0.28.0",
  "imageio>=2.34.0",
  "imageio-ffmpeg>=0.5.1",
  "Pillow>=10.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.28.0",
]

[tool.pytest.ini_options]
pythonpath = ["app"]
testpaths = ["tests"]
addopts = "-q"
